# cricket

./: .gitignore  README.md  main.py  pyproject.toml  your_test.py
.github/workflows/: build.yml
cricket/: ball.py  ball_processing.py  common.py  constants.py  data_processing.py  first_class.py  innings_processing.py  json_parsing.py  limited_overs.py  logging_config.py  match_processing.py  over.py  over_processing.py  simulator.py
cricket/extraction/: ball_processing.py  data_processing.py  download.py  innings_processing.py  json_parsing.py  match_processing.py  over_processing.py
cricket/ml/: __init__.py  config.py  data_preparation.py  evaluation.py  feature_engineering.py  training.py  training_pipeline.py
cricket/transformation/: batting.py  match.py  utils.py
data/: all_match_metadata.jsonl  ball_level_data.parquet  match_metadata.csv  match_metadata.parquet
mlflow_setup/: README.md  mlflow.db  mlflow_config.yaml  restart_mlflow.sh  start_mlflow.sh  status_mlflow.sh  stop_mlflow.sh
nbs/: 01_data_checks.ipynb
notebooks/: 01_data_exploration.ipynb  02_batter_stats.ipynb  t20_model_evaluation.ipynb  t20_model_training.ipynb  t20_regression_exploration.ipynb  training_summary.json
scripts/: create_test_fixture_1072317.py
tests/: test_ball.py  test_ball_processing.py  test_data_processing.py  test_innings_processing.py  test_json_parsing.py  test_match_features.py  test_match_processing.py  test_over_proccessing.py  test_over_processing.py  test_simulator.py
tests/test_data/: all_ball_by_ball.jsonl  all_match_metadata.jsonl  extra_over_output.json  hundred_match_output.json  innings_forfeit_match_input.json  innings_forfeit_match_output.json  innings_output.json  innings_with_powerplay_output.json  innings_with_target_output.json  maiden_over_output.json  match_metadata.parquet  odi_match_output.json  scoring_over_output.json  short_over_output.json  t20_match_output.json  test_ball_one.json  test_match_output.json  test_one_day.json  wicket_over_input.json  wicket_over_output.json
tests/test_innings_processing/: innings_input.json  innings_output.json  innings_output.parquet  innings_with_powerplay_input.json  innings_with_powerplay_output.json  innings_with_powerplay_output.parquet  innings_with_target_input.json  innings_with_target_output.json  innings_with_target_output.parquet
tests/test_json_parsing/: ball_level_data.parquet  match_metadata.parquet
tests/test_match_features/: match_1072317_both_innings_10_overs.parquet  match_1072317_first_50_balls.parquet  match_1072317_first_over.parquet  match_1072317_full_match.parquet  match_1072317_info.json
tests/test_match_processing/: hundred_match_input.json  hundred_match_metadata.parquet  hundred_match_output.json  hundred_match_output.parquet  innings_forfeit_match_metadata.parquet  innings_forfeit_match_output.json  innings_forfeit_match_output.parquet  (+11 more)
(+34 files in other folders)
