[project]
name = "cricket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "polars>=1.32.0",
    "requests>=2.25.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.5",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "seaborn>=0.13.2",
]
