[project]
name = "cricket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "polars>=1.32.0",
    "pydantic>=2.11.7",
    "requests>=2.25.0",
    "mlflow>=2.18.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "seaborn>=0.13.2",
    "ty>=0.0.1a16",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cricket"]
